k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster
  labels:
    environment: production
    project: togglemaster
